--- a/heston_model.ipynb
+++ b/heston_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,19 @@
      "output_type": "stream",
      "text": [
       "                               symbol_id                 time_exchange                  time_coinapi  strike_price  ask_price  ask_size  bid_price  bid_size  underlying_price               time_expiration\n",
-      "0    DERIBIT_OPT_BTC_USD_250425_104000_C  2025-02-04T08:59:49.0661066Z  2025-02-04T08:59:49.0661250Z      104000.0     0.0910       2.2     0.0875       2.2      98479.653102  2025-04-25T08:00:00.0000000Z\n",
-      "1    DERIBIT_OPT_BTC_USD_250425_175000_C  2025-02-04T08:59:50.0697020Z  2025-02-04T08:59:50.0697422Z      175000.0     0.0070       4.6     0.0055       1.0      98479.653102  2025-04-25T08:00:00.0000000Z\n",
-      "2    DERIBIT_OPT_BTC_USD_250425_118000_C  2025-02-04T09:00:01.3933261Z  2025-02-04T09:00:01.3933446Z      118000.0     0.0500       6.0     0.0460       6.0      98479.653102  2025-04-25T08:00:00.0000000Z\n",
-      "3     DERIBIT_OPT_BTC_USD_250425_92000_C  2025-02-04T08:59:42.7111738Z  2025-02-04T08:59:42.7112037Z       92000.0     0.1495       3.2     0.1440       3.0      98479.653102  2025-04-25T08:00:00.0000000Z\n",
-      "4    DERIBIT_OPT_BTC_USD_250425_115000_C  2025-02-04T09:00:01.3975352Z  2025-02-04T09:00:01.3975477Z      115000.0     0.0565       6.0     0.0525       6.0      98479.653102  2025-04-25T08:00:00.0000000Z\n",
+      "0     DERIBIT_OPT_BTC_USD_250328_85000_C  2025-02-04T10:12:58.9457653Z  2025-02-04T10:12:58.9458057Z       85000.0     0.1775      24.3     0.1735      31.7        98721.6805  2025-03-28T08:00:00.0000000Z\n",
+      "1     DERIBIT_OPT_BTC_USD_250328_95000_C  2025-02-04T10:12:51.8410247Z  2025-02-04T10:12:51.8410520Z       95000.0     0.1105      23.0     0.1070      27.3        98721.6805  2025-03-28T08:00:00.0000000Z\n",
+      "2     DERIBIT_OPT_BTC_USD_250328_65000_C  2025-02-04T10:11:33.5444068Z  2025-02-04T10:11:33.5444289Z       65000.0     0.3575      30.3     0.3530      30.3        98721.6805  2025-03-28T08:00:00.0000000Z\n",
+      "3     DERIBIT_OPT_BTC_USD_250328_75000_C  2025-02-04T10:10:49.4841660Z  2025-02-04T10:10:49.4841859Z       75000.0     0.2630      17.4     0.2580      23.9        98721.6805  2025-03-28T08:00:00.0000000Z\n",
+      "4     DERIBIT_OPT_BTC_USD_250328_45000_C  2025-02-04T10:12:19.4129673Z  2025-02-04T10:12:19.4129892Z       45000.0     0.5535      27.2     0.5500      33.2        98721.6805  2025-03-28T08:00:00.0000000Z\n",
       "..                                   ...                           ...                           ...           ...        ...       ...        ...       ...               ...                           ...\n",
-      "413  DERIBIT_OPT_BTC_USD_250627_180000_C  2025-02-04T08:59:50.0367609Z  2025-02-04T08:59:50.0367753Z      180000.0     0.0230       0.1     0.0150       0.1      98479.653102  2025-06-27T08:00:00.0000000Z\n",
-      "414  DERIBIT_OPT_BTC_USD_250627_115000_C  2025-02-04T09:00:01.7270571Z  2025-02-04T09:00:01.7270749Z      115000.0     0.8100       0.1     0.0800       0.1      98479.653102  2025-06-27T08:00:00.0000000Z\n",
-      "415  DERIBIT_OPT_BTC_USD_250627_130000_C  2025-02-04T09:00:01.7282054Z  2025-02-04T09:00:01.7282254Z      130000.0     0.0975       0.1     0.0510       0.1      98479.653102  2025-06-27T08:00:00.0000000Z\n",
-      "416  DERIBIT_OPT_BTC_USD_250627_125000_C  2025-02-04T09:00:01.4221880Z  2025-02-04T09:00:01.4221986Z      125000.0     0.0765       6.0     0.0705       6.0      98479.653102  2025-06-27T08:00:00.0000000Z\n",
-      "417  DERIBIT_OPT_BTC_USD_250627_190000_C  2025-02-04T08:59:41.8123957Z  2025-02-04T08:59:41.8124165Z      190000.0     0.0165       3.6     0.0140       3.7      98479.653102  2025-06-27T08:00:00.0000000Z\n",
+      "371  DERIBIT_OPT_BTC_USD_250207_112000_C  2025-02-04T10:12:09.4879526Z  2025-02-04T10:12:09.4879720Z      112000.0     0.0005      14.7     0.0003       6.5        98721.6805  2025-02-07T08:00:00.0000000Z\n",
+      "372  DERIBIT_OPT_BTC_USD_250207_102000_C  2025-02-04T10:12:56.6546659Z  2025-02-04T10:12:56.6547231Z      102000.0     0.0085      26.3     0.0075      81.8        98721.6805  2025-02-07T08:00:00.0000000Z\n",
+      "373  DERIBIT_OPT_BTC_USD_250207_114000_C  2025-02-04T10:10:54.4698609Z  2025-02-04T10:10:54.4698726Z      114000.0     0.0003       6.0     0.0002      15.0        98721.6805  2025-02-07T08:00:00.0000000Z\n",
+      "374  DERIBIT_OPT_BTC_USD_250207_104000_C  2025-02-04T10:12:58.0090712Z  2025-02-04T10:12:58.0090905Z      104000.0     0.0045       1.6     0.0041      14.6        98721.6805  2025-02-07T08:00:00.0000000Z\n",
+      "375  DERIBIT_OPT_BTC_USD_250207_108000_C  2025-02-04T10:12:51.7798804Z  2025-02-04T10:12:51.7799198Z      108000.0     0.0013       5.2     0.0010      43.1        98721.6805  2025-02-07T08:00:00.0000000Z\n",
       "\n",
-      "[418 rows x 10 columns]\n"
+      "[376 rows x 10 columns]\n"
      ]
     }
    ],
@@ -112,27 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      0.218914\n",
-       "1      0.218914\n",
-       "2      0.218914\n",
-       "3      0.218915\n",
-       "4      0.218914\n",
+       "0      0.142115\n",
+       "1      0.142116\n",
+       "2      0.142118\n",
+       "3      0.142120\n",
+       "4      0.142117\n",
        "         ...   \n",
-       "413    0.391399\n",
-       "414    0.391399\n",
-       "415    0.391399\n",
-       "416    0.391399\n",
-       "417    0.391399\n",
-       "Name: maturity_years, Length: 418, dtype: float64"
+       "371    0.007962\n",
+       "372    0.007961\n",
+       "373    0.007965\n",
+       "374    0.007961\n",
+       "375    0.007961\n",
+       "Name: time_to_maturity, Length: 376, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,8 +145,8 @@
     "df_calls['time_expiration'] = pd.to_datetime(df_calls['time_expiration'])\n",
     "\n",
     "#Calculate the maturity in years\n",
-    "df_calls['maturity_years'] = (df_calls['time_expiration'] - df_calls['time_exchange']).dt.total_seconds() / (365.25 * 24 * 3600)\n",
-    "df_calls['maturity_years']"
+    "df_calls['time_to_maturity'] = (df_calls['time_expiration'] - df_calls['time_exchange']).dt.total_seconds() / (365.25 * 24 * 3600)\n",
+    "df_calls['time_to_maturity']"
    ]
   },
   {
@@ -158,27 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      0.08925\n",
-       "1      0.00625\n",
-       "2      0.04800\n",
-       "3      0.14675\n",
-       "4      0.05450\n",
+       "0      0.17550\n",
+       "1      0.10875\n",
+       "2      0.35525\n",
+       "3      0.26050\n",
+       "4      0.55175\n",
        "        ...   \n",
-       "413    0.01900\n",
-       "414    0.44500\n",
-       "415    0.07425\n",
-       "416    0.07350\n",
-       "417    0.01525\n",
-       "Name: market_price, Length: 418, dtype: float64"
+       "371    0.00040\n",
+       "372    0.00800\n",
+       "373    0.00025\n",
+       "374    0.00430\n",
+       "375    0.00115\n",
+       "Name: market_price, Length: 376, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,6 +186,73 @@
    "source": [
     "df_calls['market_price'] = (df_calls['ask_price'] + df_calls['bid_price']) / 2\n",
     "df_calls['market_price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      0.04543\n",
+       "1      0.04543\n",
+       "2      0.04543\n",
+       "3      0.04543\n",
+       "4      0.04543\n",
+       "        ...   \n",
+       "371    0.04543\n",
+       "372    0.04543\n",
+       "373    0.04543\n",
+       "374    0.04543\n",
+       "375    0.04543\n",
+       "Name: risk_free_rate, Length: 376, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from treasury_yield.risk_free_rate import risk_free_rate\n",
+    "\n",
+    "df_calls[\"risk_free_rate\"] = risk_free_rate\n",
+    "df_calls[\"risk_free_rate\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     strike_price  time_to_maturity  market_price  underlying_price  risk_free_rate\n",
+      "0         85000.0          0.142115       0.17550        98721.6805         0.04543\n",
+      "1         95000.0          0.142116       0.10875        98721.6805         0.04543\n",
+      "2         65000.0          0.142118       0.35525        98721.6805         0.04543\n",
+      "3         75000.0          0.142120       0.26050        98721.6805         0.04543\n",
+      "4         45000.0          0.142117       0.55175        98721.6805         0.04543\n",
+      "..            ...               ...           ...               ...             ...\n",
+      "371      112000.0          0.007962       0.00040        98721.6805         0.04543\n",
+      "372      102000.0          0.007961       0.00800        98721.6805         0.04543\n",
+      "373      114000.0          0.007965       0.00025        98721.6805         0.04543\n",
+      "374      104000.0          0.007961       0.00430        98721.6805         0.04543\n",
+      "375      108000.0          0.007961       0.00115        98721.6805         0.04543\n",
+      "\n",
+      "[376 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selecting relevant columns\n",
+    "calibration_data = df_calls[['strike_price', 'time_to_maturity', 'market_price', 'underlying_price', 'risk_free_rate']]\n",
+    "\n",
+    "print(calibration_data)"
    ]
   },
   {
